<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bronx Science Clubs</string>
    <string name="action_settings">Settings</string>

    <color name="white">#FFFFFF</color>
    <color name="yellow">#FFFFCC</color>
    <color name="gray">#c8c8c8</color>
    <color name="green">#339933</color>

    <string name="home_text">Home</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>

    <string name="name_hint">Name</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="OSIS_hint">OSIS</string>
    <string name="homeroom_hint">Homeroom</string>
    <string name="register_success">Registered!</string>

    <string name="menu_attendance">Attendance</string>
    <string name="menu_your_clubs">Your Clubs</string>
    <string name="menu_new_club">New Club</string>
    <string name="menu_logout">Logout</string>

    <string name="code_hint">Meeting code</string>
    <string name="attendance_text">Log Attendance</string>
    <string name="attendance_success">Success!</string>
    
    <string name="new_club">New Club</string>
    <string name="new_club_hint">Name</string>
    <string name="president_hint">President</string>
    <string name="president_osis_hint">President OSIS</string>
    <string name="vice_president_hint">Vice President</string>
    <string name="vice_president_osis_hint">Vice President OSIS</string>
    <string name="secretary_hint">Secretary</string>
    <string name="secretary_osis_hint">Secretary OSIS</string>
    <string name="new_club_text">Create club</string>
    <string name="new_club_id">New Club ID</string>

</resources>
