<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".LoginActivity"> />

    <item android:id="@+id/attendance"
        android:title="@string/menu_attendance"
        app:showAsAction="never" />
    <item android:id="@+id/your_clubs"
        android:title="@string/menu_your_clubs"
        app:showAsAction="never" />
    <item android:id="@+id/new_club"
        android:title="@string/menu_new_club"
        app:showAsAction="never" />
    <item android:id="@+id/settings"
        android:title="@string/menu_settings"
        app:showAsAction="never" />
    <item android:id="@+id/logout"
        android:title="@string/menu_logout"
        app:showAsAction="never" />

</menu>
